# Sofia_practice

C-Practice/: .daemon.c.swp  .fork.c.swp  1.c  a.out  daemon.c  fork.c  pipe  zombie.c
C-Practice/array/: 1.c  2.c  2lar.c  2small.c  3.c  4.c  5.c  6.c  7.c  8.c  a.out  const.c  freq.c  mat.c  matadd.c  merge.c  sort.c  sortdes.c  volatile.c  ytcr.c
C-Practice/array_of_pointers/: 1.c  a.out  init.c  init1.c  ref.c  rev.c  sort.c  static.c  swap.c
C-Practice/as1/: 1.c  a.out  arr_lar.c  fact.c  fib.c  len.c  strcat.c  table.c
C-Practice/as2/: a.out  arr.c  arr2.c  arrsort.c  bit.c  calc.c  freq.c  lar.c  max.c  pat.c  pat2.c  pat3.c  pow2.c  powof4.c  spherical.c  strrev.c  strstr.c
C-Practice/bitwise/: 1.c  2.c  3.c  4.c  5.c  LSB.c  LSB.s  MSB.c  a.out  binary.h  bitswap.c  checkset.c  convertion.c  count.c  count1.c  even.c  filp  flip.c  func.c  highest.c  ifset.c  infinite.c  leading.c  lowest.c  lsb  mask.c  muldiv.c  nibswap.c  non_reap.c  oppsign.c  pascal.c  pow.c  repeat.c  resetn.c  reverse_int.c  rightset.c  set.c  set_count.c  setbits.c  swap.c  (+4 more)
C-Practice/bitwise.c/: LSB.c  MSB.c  a.out  clear.c  getn.c  highest.c  toggle.c
C-Practice/calc/: Makefile  add.c  calci  calculator.c  div.c  even.c  fibonacci.c  mul.c  odd.c  prime.c  sub.c
C-Practice/cmake/calc/: CMakeLists.txt
C-Practice/compilation/: add  add.c  add.i  add.s
C-Practice/compile/: hell.i  hello  hello.c
C-Practice/double_ll/: pr.c  (+13 more)
linux_internals/: daemon  daemon.c  fork  fork.c  fork1  fork1.c  frd  fwr  fwr.c  header.h  libarith.so.1  main  main.c  pipe.c  zombie  zombie.c
(+316 files in other folders)
